<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:stretchColumns="1" >

    <!-- title -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
         >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcome"
            android:paddingTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/banner" />
    </LinearLayout>

    <!-- body:form -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
         >

        <!-- 输入用户名的行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp" >

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameLab"
                android:textColor="#315aa1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <EditText
                android:id="@+id/userEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameText"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:saveEnabled="true"
                android:singleLine="true" />
        </LinearLayout>

        <!-- 输入密码的行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/txtUserPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwdLab"
                android:textColor="#315aa1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <EditText
                android:id="@+id/pwdEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwdText"
                android:password="true" />
        </LinearLayout>

        <!-- 设置单选按钮用于存储登陆信息 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <CheckBox
                android:id="@+id/saveUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="保存用户名及密码" />
        </LinearLayout>

        <!-- 定义登录、取消按钮的行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/bnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/bnCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelBtn" />
        </LinearLayout>
    </LinearLayout>
<!-- bottom -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
         >

        <TextView
            android:id="@+id/TextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            />
    </LinearLayout>

</LinearLayout>